<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/artImageView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="70dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="Enter Name"
        android:inputType="textPersonName"

     />

    <EditText
        android:id="@+id/artistText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Enter Artist"
        android:inputType="textPersonName"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/yearText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Enter Year"
        android:inputType="textPersonName"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="SAVE"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
         />
</LinearLayout>